--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "George Higbie",
   "license": "ISC",
   "dependencies": {
+    "cat-me": "^1.0.3",
     "express": "^4.15.4",
     "hbs": "^4.0.1"
   }
